[package]
name = "openclip"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.54", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_Graphics_Gdi",
  "Win32_UI_Input_KeyboardAndMouse",
] }
secrecy = "0.8"
rusqlite = { version = "0.37", features = ["bundled-sqlcipher"]}
eframe = "0.27.0"
chrono = "0.4"
blake3 = "1.8.3"